--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1 id="title">PHARMACY HELPER</h1>
     <div class="main-content">
       <div class="input-content">
-        <h1 id="input-content__text">어떤 약을 조제하시나요? [체크✔]</h1>
+        <h1 id="input-content__text">어떤 약을 조제하시나요? [✔]</h1>
         <form id="drug-info__radio">
           <ul class="drugs">
             <li>
