--- a/index.html
+++ b/index.html
@@ -13,54 +13,97 @@
     <title>PHARMACY HELPER</title>
   </head>
   <body>
-    <h1 id="title">PHARMACY HELPER</h1>
-    <div class="main-content">
-      <div class="input-content">
-        <h1 id="input-content__text">어떤 약을 조제하시나요? [✔]</h1>
-        <form id="drug-info__radio">
-          <ul class="drugs">
-            <li>
-              <div id="drug-info">
-                <img src="img/HARU.png" />
-                <div>1박스(140개) / 1판(14개)</div>
-              </div>
-              <div class="drug-radio">
-                <input type="radio" name="drug" id="HARU-D" checked />
-                <label id="radio-label">HARU-D</label>
-              </div>
-            </li>
-            <li>
-              <div id="drug-info">
-                <img src="img/OPAL.png" />
-                <div>1박스(84개) / 1판(21개)</div>
-              </div>
-              <div class="drug-radio">
-                <input type="radio" name="drug" id="OPAL" />
-                <label id="radio-label">OPAL</label>
-              </div>
-            </li>
-            <li>
-              <div id="drug-info">
-                <img src="img/pills.png" />
-                <div>1박스(28개) / 1판(7개)</div>
-              </div>
-              <div class="drug-radio">
-                <input type="radio" name="drug" id="ELSE" />
-                <label id="radio-label">28개입</label>
-              </div>
-            </li>
-          </ul>
-        </form>
-        <div class="drug-input">
-          <span id="drug-input__text">약의 개수를 입력해주세요.</span>
-          <form id="drug-input__form">
-            <input required type="number" class="drug-count" pattern="\d*" placeholder="개수 입력" />
-            <input type="submit" value="계산" />
-            <input type="reset" value="리셋" />
-          </form>
-        </div>
+    <!-- 계산기 모달 -->
+    <section class="calculater hidden">
+      <div class="overlay">
+        <button onclick="offCalculater()" class="off-button">✖</button>
       </div>
+      <div class="calculater-container">
+        <div class="expression"></div>
+        <div class="screen"></div>
+        <table>
+          <tbody>
+            <tr class="purple">
+              <td class="all-clear" onclick="clearScr()">AC</td>
+            </tr>
+            <tr class="purple">
+              <td onclick="sendNum('(')">(</td>
+              <td onclick="sendNum(')')">)</td>
+              <td onclick="sendNum('%')">%</td>
+              <td onclick="deleteScr()">←</td>
+            </tr>
+            <tr></tr>
+            <tr>
+              <td onclick="sendNum('7')">7</td>
+              <td onclick="sendNum('8')">8</td>
+              <td onclick="sendNum('9')">9</td>
+              <td class="purple" onclick="sendNum('+')">+</td>
+            </tr>
+            <tr>
+              <td onclick="sendNum('4')">4</td>
+              <td onclick="sendNum('5')">5</td>
+              <td onclick="sendNum('6')">6</td>
+              <td class="purple" onclick="sendNum('-')">-</td>
+            </tr>
+            <tr>
+              <td onclick="sendNum('1')">1</td>
+              <td onclick="sendNum('2')">2</td>
+              <td onclick="sendNum('3')">3</td>
+              <td class="purple" onclick="sendNum('*')">x</td>
+            </tr>
+            <tr>
+              <td onclick="sendNum('.')">.</td>
+              <td onclick="sendNum('0')">0</td>
+              <td class="equals" onclick="equalTo()">=</td>
+              <td class="purple" onclick="sendNum('/')">/</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+    <div onclick="offCalculater()" class="calculater-button">
+      <i class="fas fa-calculator"></i>
     </div>
+    <h1 id="title">PHARMACY HELPER</h1>
+    <div class="input-content">
+      <h1 id="input-content__text">어떤 약을 조제하시나요? [✔]</h1>
+      <section class="choose-section">
+        <ul class="choose-drug">
+          <li class="drug-info">
+            <input type="radio" name="drug" class="drug" id="haru" />
+            <label for="haru">
+              <img src="./img/HARU.png" />
+              <p>HARU-D</p>
+              <p id="info">1박스(140개) / 1판(14개)</p>
+            </label>
+          </li>
+          <li class="drug-info">
+            <input type="radio" name="drug" class="drug" id="opal" />
+            <label for="opal">
+              <img src="./img/OPAL.png" />
+              <p>OPAL</p>
+              <p id="info">1박스(84개) / 1판(21개)</p>
+            </label>
+          </li>
+          <li class="drug-info">
+            <input type="radio" name="drug" class="drug" id="pill" />
+            <label for="pill">
+              <img src="./img/pills.png" />
+              <p>28개입</p>
+              <p id="info">1박스(28개) / 1판(7개)</p>
+            </label>
+          </li>
+        </ul>
+      </section>
+
+      <section class="drug-input">
+        <h1 id="drug-input__text">약의 개수를 입력해주세요.</h1>
+        <input required type="number" class="drug-count" pattern="\d*" placeholder="개수 입력" />
+        <input type="submit" class="calculate" value="계산" />
+        <input type="reset" class="reset" value="리셋" />
+      </section>
+    </div>
+
     <div class="dots">...</div>
     <!-- 계산 결과 나오는 부분 -->
     <h1 id="result-content__text">이렇게 조제해주시면 돼요.</h1>
@@ -79,14 +122,16 @@
       </li>
       <li>
         <div id="space__number" class="result-box"></div>
-        <div id="space__text result-text">칸</div>
+        <div id="space__text result-text">개</div>
       </li>
     </ul>
+
     <footer>
       <div class="footer_main">
         <div class="copyright">ⓒ 2021. eunseo-kim all rights reserved.</div>
       </div>
     </footer>
     <script src="js/calculate.js"></script>
+    <script src="js/calculater.js"></script>
   </body>
 </html>
