--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- 계산기 모달 -->
     <section class="calculater hidden">
       <div class="overlay">
-        <button onclick="offCalculater()" class="off-button">✖</button>
+        <button onclick="offCalculater()" class="off-button">x</button>
       </div>
       <div class="calculater-container">
         <div class="expression"></div>
